[project]
name = "wharf"
version = "0.1.0"
description = "Opinionated web frontend for Dokku"
requires-python = ">=3.12"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
filterwarnings = [
  "ignore::django.core.cache.backends.base.CacheKeyWarning"
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "DJ"]
ignore = ["DJ008"]
