[project]
description = "Opinionated web frontend for Dokku"
name = "wharf"
requires-python = ">=3.12"
version = "0.1.0"

[tool.djlint]
ignore = "H030,H031"  # meta tags ignores

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
filterwarnings = [
  "ignore::django.core.cache.backends.base.CacheKeyWarning"
]

[tool.ruff.lint]
ignore = ["DJ008"]
select = ["E4", "E7", "E9", "F", "I", "DJ"]
